--- a/Atividades/atividade2/pubspec.yaml
+++ b/Atividades/atividade2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: atividade2
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
-  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
