--- a/Atividades/atividade2/web/manifest.json
+++ b/Atividades/atividade2/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_application_1",
-    "short_name": "flutter_application_1",
+    "name": "atividade2",
+    "short_name": "atividade2",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
