--- a/projeto_mobile/pubspec.yaml
+++ b/projeto_mobile/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=2.19.4 <3.0.0'
+  # sdk: '>=3.1.0-9.0.dev <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_svg: ^0.22.0
+  table_calendar: ^3.0.0
   flutter:
     sdk: flutter
 
