--- a/projeto_mobile/pubspec.yaml
+++ b/projeto_mobile/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   table_calendar: ^3.0.0
   flutter:
     sdk: flutter
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
