--- a/projeto_mobile/pubspec.yaml
+++ b/projeto_mobile/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
+  shared_preferences: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
