--- a/projeto_mobile/pubspec.yaml
+++ b/projeto_mobile/pubspec.yaml
@@ -29,14 +29,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_svg: ^0.22.0
-  table_calendar: ^3.0.0
   flutter:
     sdk: flutter
-  hive: ^2.0.4
+  http: ^0.13.6
+  cupertino_icons: ^1.0.2
+  hive: ^2.2.3
+  shared_preferences: ^2.1.1
+  intl: ^0.18.1
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.2
-  shared_preferences: ^2.0.6
+  flutter_svg: ^2.0.6
+  table_calendar: ^3.0.9
+  flutter_bloc: ^8.1.3
+  firebase_core: ^2.13.0
+  firebase_database: ^10.2.1
+  firebase_auth: ^4.6.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
