--- a/projeto_mobile/pubspec.yaml
+++ b/projeto_mobile/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_database: ^10.2.1
   firebase_auth: ^4.6.1
   firebase_storage: ^11.2.3
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
